# chess_lib

./: .gitignore  CMakeLists.txt  README.md  makefile  moves_combinatorics  time_test
include/chess/: attack_mask.h  bishop_attack.h  board_visualisation.h  castling_validation.h  combinatorics_mask.h  console_chess.h  console_visualization.h  converter_position.h  define_types.h  en_passant_validation.h  magic_hash_bishop_rook.h  make_move.h  mask_feature_generation.h  moves_calculation.h  moves_position.h  pin_mask.h  squares_alghorithms.h
include/chess/algorithms/: bits_alghorithms.h  bits_algorithms.h  squares_algorithms.h
include/chess/mask_alg/: attack_mask.h  check_mask.h  pin_mask.h
include/chess/moves/: bishop_attack.h  king_attack.h  knight_attack.h  moves_pieces.h  pawn_attack.h  rook_attack.h
include/chess/moves_alg/: move_generation.h  moves_calculation.h  moves_pieces.h  moves_position.h
include/chess/search/: search_tree.h
lib/: test.cpp  test.h
moves_combinatorics.dSYM/Contents/: Info.plist
moves_combinatorics.dSYM/Contents/Resources/DWARF/: moves_combinatorics
moves_combinatorics.dSYM/Contents/Resources/Relocations/aarch64/: moves_combinatorics.yml
src/: bits_alghorithms.c  board_visualisation.c  check_mask.c  check_mask.h  combinatorics_mask.c  converter_position.c  king_attack.c  main.c  moves_calculation.c  squares_alghorithms.c
src/algorithms/: bits_alghorithms.c  combinatorics_mask.c  squares_alghorithms.c
src/attack_generation/: bishop_attack.c  knight_attack.c  magic_hash_bishop_rook.c  rook_attack.c
src/castling_en_passant_handling/: castling_validation.c  en_passant_validation.c
src/console/: console_chess.c  console_visualization.c
src/mask_alg/: attack_mask.c  check_mask.c  pin_mask.c
src/move_handling/: make_move.c  mask_feature_generation.c  move_generation.c
src/moves_alg/: bishop_attack.c  king_attack.c  moves_calculation.c  moves_pieces.c  moves_position.c  pawn_attack.c  rook_attack.c
src/search_moves/: search_tree.c
src/tests/: time_test.c  trash.c
src/wasm/: moves_wasm.c
tests/: fen_positions_with_scores.txt  search_engine.c  time_test2.c
